fix reference docs padding on mobile

--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -252,5 +252,9 @@ details {
 
 iron-doc-viewer {
   padding: 20px 40px;
+
+  @media (max-width: $mobile-media-breakpoint) {
+    padding: 20px;
+  }
 }
 // -----
